packages/app/src/pages/Stories/Stories.scss
#stories-dnd {
  display: flex;
  flex-direction: column;
  align-items: center;
  
  .header-section{
    display: flex;
    align-items: center;
    flex-direction: column;
  }

  .game-section {
    // background-color: #aaffaa;
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .drag-letters-container {
    border: '1px solid black';
    position: 'relative';
    z-index: 1;
  }

  .dropzone-container {
    position: absolute;
    display: flex;
    flex-direction: row;
    // justify-content: center;
    // align-items: center;
    // height: 100px;
    // width: 500px;
    z-index: 1;
  }
}

.rotated-letter {
  transform: rotate(-7deg); /* Initial tilt angle */
  -webkit-transform: rotate(-7deg); /* For Safari */
}

.rotated-letter:nth-child(even) {
  transform: rotate(7deg); /* Alternating tilt angle */
  -webkit-transform: rotate(7deg); /* For Safari */
}


#dropzone-dnd {
  // .dropzone {
  //   /* drop zone styling */
  //   position: absolute;
    
  //   display: flex;
  //   align-items: center;
  //   justify-content: center;
  // }

  .hovered {
    /* Styling when dragged item is over the drop zone */
    background-color: #aaffaa;
  }

  .invalid {
    /* Styling when dragged item is not allowed to be dropped */
    background-color: #ffaaaa;
  }
}

.stories-game-image {
  margin: 7px;
  max-height: calc((100vh - 300px - 100px)/2);
}
.text-responsive h1{
  font-weight: bold;
  margin: 0 68px 0 68px;
}
#text-container {
  text-4xl {
    font-size: 40px !important; 
    line-height: 48px !important; 
    letter-spacing: -0.5px !important; 
  }

  .text-3xl {
    font-size: 24px !important; 
    line-height: 28px !important; 
    letter-spacing: -0.5px !important; 
  }

  // Media query for screens with a max-width of 768px
  @media (max-width: 1180px) {
    .text-4xl {
      font-size: 30px !important; 
      line-height: 32px !important; 
      letter-spacing: normal !important; 
    }

    .text-3xl {
      font-size: 23px !important; 
      line-height: 26px !important; 
      letter-spacing: normal !important; 
    }
  }
}

.stories-volume-button {
    --background: var(--Flamenco-High, #ffaedc);
    --ripple-color: var(--Flamenco-High, #ffaedc);
    height: 62px;
    width: 62px;
}

.stories-volume-icon {
    height: 38px;
    width: auto;
    /*
    width: auto;
    background-color: var(--Flamenco-High, #ffaedc);
    padding: 1rem;
    border-radius: 1rem;
    */
}

.content-wrapper {
  .page-control {
    height: 4rem;
    width: auto;
    position: absolute;

    &.forward {
      top: calc(300px + 62px / 2);
      right: calc(50% - 460px - 36px);
      z-index: 100;
    }

    &.backward {
      top: calc(300px + 62px / 2);
      left: calc(50% - 460px - 36px);
      z-index: 100;
    }
  }
    
}

